--- a/en-akulu-istifleme-makinesi.html
+++ b/en-akulu-istifleme-makinesi.html
@@ -256,7 +256,7 @@
             <div class="container">
                 <h2 class="page-header__title">BATTERY POWERED STACKING MACHINE</h2>
                 <ul class="boskery-breadcrumb list-unstyled">
-                    <li><a href="en-index.html">aNASAYFA</a></li>
+                    <li><a href="en-index.html">HOME</a></li>
                     <li><span>BATTERY POWERED STACKING MACHINE</span></li>
                 </ul><!-- /.thm-breadcrumb list-unstyled -->
             </div><!-- /.container -->
