--- a/elektrikli-forklift-ht2,0t.html
+++ b/elektrikli-forklift-ht2,0t.html
@@ -53,46 +53,46 @@
     <link rel="stylesheet" href="assets/vendors/swiper/css/swiper-bundle.min.css" />
 
     <!-- template styles -->
-  <link rel="stylesheet" href="assets/css/boskery.css" />
+    <link rel="stylesheet" href="assets/css/boskery.css" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-13N7RSEHWD"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-13N7RSEHWD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'G-13N7RSEHWD');
-  </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-13N7RSEHWD');
+    </script>
 
-  <!-- Google Tag Manager -->
-  <script>
-    (function(w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-K92KW6JC');
-  </script>
-  <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-K92KW6JC');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body class="custom-cursor">
 
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K92KW6JC" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K92KW6JC" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- /.preloader -->
 
@@ -142,7 +142,8 @@
                                 <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
                                 <span class="sr-only">Instagram</span>
                             </a>
-                            <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
+                            <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true"
+                                target="_blank">
                                 <i class="fab fa-youtube"></i>
                                 <span class="sr-only">Youtube</span>
                             </a>
@@ -164,13 +165,14 @@
                             </div>
                             <!-- /.main-header__top__icon-group -->
                             <div class="main-header__call">
-                                <a href="tel:+905335742631" class="main-header__call__numbers"><span
+                                <a href="#" class="main-header__call__numbers"><span
                                         class="main-header__call__icon icon-phone-call"></span></a>
                                 <!-- /.main-header__call__icon -->
                                 <div class="main-header__call__inner">
                                     <span class="main-header__call__tagline">BİZİ ARAYIN</span>
                                     <!-- /.main-header__call__tagline -->
-                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
+                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
+                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
                                     <!-- /.main-header__call__number -->
                                 </div>
                                 <!-- /.main-header__call__inner -->
@@ -705,6 +707,10 @@
                                             <span class="icon-phone-call"></span>
                                             <a href="tel:+905335742631">0533 574 2631</a>
                                         </li>
+                                        <li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
+                                        </li>
                                     </ul>
                                     <!-- /.list-unstyled footer-widget__info -->
                                     <div class="footer-widget__social">
@@ -720,7 +726,8 @@
                                             <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
                                             <span class="sr-only">Instagram</span>
                                         </a>
-                                        <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
+                                        <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg"
+                                            aria-hidden="true" target="_blank">
                                             <i class="fab fa-youtube"></i>
                                             <span class="sr-only">Youtube</span>
                                         </a>
@@ -842,6 +849,10 @@
                     <i class="fa fa-phone-alt"></i>
                     <a href="tel:+905335742631">0533 574 2631</a>
                 </li>
+                <li>
+                    <i class="fa fa-phone-alt"></i>
+                    <a href="tel:+905342456030">0534 245 6030</a>
+                </li>
             </ul>
             <!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
@@ -919,6 +930,10 @@
                     <li>
                         <span class="icon-phone-call"></span>
                         <a href="tel:+905335742631">0533 574 2631</a>
+                    </li>
+                    <li>
+                        <span class="icon-phone-call"></span>
+                        <a href="tel:+905342456030">0534 245 6030</a>
                     </li>
                 </ul>
                 <!-- /.sidebar-one__info__list -->
