--- a/en-ekskavator-ht-15.html
+++ b/en-ekskavator-ht-15.html
@@ -53,46 +53,46 @@
     <link rel="stylesheet" href="assets/vendors/swiper/css/swiper-bundle.min.css" />
 
     <!-- template styles -->
-  <link rel="stylesheet" href="assets/css/boskery.css" />
+    <link rel="stylesheet" href="assets/css/boskery.css" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-13N7RSEHWD"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-13N7RSEHWD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'G-13N7RSEHWD');
-  </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-13N7RSEHWD');
+    </script>
 
-  <!-- Google Tag Manager -->
-  <script>
-    (function(w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-K92KW6JC');
-  </script>
-  <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-K92KW6JC');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body class="custom-cursor">
 
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K92KW6JC" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K92KW6JC" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- /.preloader -->
 
@@ -165,13 +165,14 @@
                             </div>
                             <!-- /.main-header__top__icon-group -->
                             <div class="main-header__call">
-                                <a href="tel:+905335742631" class="main-header__call__numbers"><span
+                                <a href="#" class="main-header__call__numbers"><span
                                         class="main-header__call__icon icon-phone-call"></span></a>
                                 <!-- /.main-header__call__icon -->
                                 <div class="main-header__call__inner">
                                     <span class="main-header__call__tagline">CALL US</span>
                                     <!-- /.main-header__call__tagline -->
-                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
+                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
+                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
                                     <!-- /.main-header__call__number -->
                                 </div>
                                 <!-- /.main-header__call__inner -->
@@ -210,7 +211,8 @@
                                             <a href="en-makasli-kaldirma-platformu.html">SCISSOR LIFT PLATFORM</a>
                                         </li>
                                         <li>
-                                            <a href="en-akulu-istifleme-makinesi.html">BATTERY POWERED STACKING MACHINE</a>
+                                            <a href="en-akulu-istifleme-makinesi.html">BATTERY POWERED STACKING
+                                                MACHINE</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -355,12 +357,16 @@
                                     <strong>Briggs & Stratton :</strong> (Euro 5/EPA)
                                 </p>
                                 <p class="product-details__excerpt__text">
-                                    <strong>Applicable Environment :</strong> Gardens, courtyards, farms, forest farms, pastures, factories, home improvement, tools and other small projects. <br>
+                                    <strong>Applicable Environment :</strong> Gardens, courtyards, farms, forest farms,
+                                    pastures, factories, home improvement, tools and other small projects. <br>
                                     Standard indicator dashboard, foot-operated crushing control system.<br>
-                                    The side swing of the boom can be added, and the left and right swing arms each have 60
+                                    The side swing of the boom can be added, and the left and right swing arms each have
+                                    60
                                     degrees.<br>
-                                    It can be equipped with telescopic chassis specially used for small spaces, and the telescopic range is 84cm-104cm.<br>
-                                    The cab can be mounted and there is no problem in operation in all weather conditions.<br>
+                                    It can be equipped with telescopic chassis specially used for small spaces, and the
+                                    telescopic range is 84cm-104cm.<br>
+                                    The cab can be mounted and there is no problem in operation in all weather
+                                    conditions.<br>
                                     Can be equipped with hydraulic pilot operation.<br>
                                     Problems in all-weather operation as the cabin can be mounted
                                     it doesn't happen.<br>
@@ -696,7 +702,8 @@
                                     <li><a href="en-dizel-forklift.html">Diesel Forklift</a></li>
                                     <li><a href="en-ekskavator.html">Excavator</a></li>
                                     <li><a href="en-makasli-kaldirma-platformu.html">Scissor Lift Platform</a></li>
-                                    <li><a href="en-akulu-istifleme-makinesi.html">Battery Powered Stacking Machine</a></li>
+                                    <li><a href="en-akulu-istifleme-makinesi.html">Battery Powered Stacking Machine</a>
+                                    </li>
                                 </ul>
                                 <!-- /.list-unstyled footer-widget__links -->
                             </div>
@@ -721,6 +728,10 @@
                                         <li>
                                             <span class="icon-phone-call"></span>
                                             <a href="tel:+905335742631">0533 574 2631</a>
+                                        </li>
+                                        <li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
                                         </li>
                                     </ul>
                                     <!-- /.list-unstyled footer-widget__info -->
@@ -860,6 +871,10 @@
                     <i class="fa fa-phone-alt"></i>
                     <a href="tel:+905335742631">0533 574 2631</a>
                 </li>
+                <li>
+                    <i class="fa fa-phone-alt"></i>
+                    <a href="tel:+905342456030">0534 245 6030</a>
+                </li>
             </ul>
             <!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
@@ -937,6 +952,10 @@
                     <li>
                         <span class="icon-phone-call"></span>
                         <a href="tel:+905335742631">0533 574 2631</a>
+                    </li>
+                    <li>
+                        <span class="icon-phone-call"></span>
+                        <a href="tel:+905342456030">0534 245 6030</a>
                     </li>
                 </ul>
                 <!-- /.sidebar-one__info__list -->
