--- a/en-ekskavator-ht-60.html
+++ b/en-ekskavator-ht-60.html
@@ -165,13 +165,14 @@
                             </div>
                             <!-- /.main-header__top__icon-group -->
                             <div class="main-header__call">
-                                <a href="tel:+905335742631" class="main-header__call__numbers"><span
+                                <a href="#" class="main-header__call__numbers"><span
                                         class="main-header__call__icon icon-phone-call"></span></a>
                                 <!-- /.main-header__call__icon -->
                                 <div class="main-header__call__inner">
                                     <span class="main-header__call__tagline">CALL US</span>
                                     <!-- /.main-header__call__tagline -->
-                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
+                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
+                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
                                     <!-- /.main-header__call__number -->
                                 </div>
                                 <!-- /.main-header__call__inner -->
@@ -714,6 +715,10 @@
                                             <span class="icon-phone-call"></span>
                                             <a href="tel:+905335742631">0533 574 2631</a>
                                         </li>
+                                        <li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
+                                        </li>
                                     </ul>
                                     <!-- /.list-unstyled footer-widget__info -->
                                     <div class="footer-widget__social">
@@ -852,6 +857,10 @@
                     <i class="fa fa-phone-alt"></i>
                     <a href="tel:+905335742631">0533 574 2631</a>
                 </li>
+                <li>
+                    <i class="fa fa-phone-alt"></i>
+                    <a href="tel:+905342456030">0534 245 6030</a>
+                </li>
             </ul>
             <!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
@@ -929,6 +938,10 @@
                     <li>
                         <span class="icon-phone-call"></span>
                         <a href="tel:+905335742631">0533 574 2631</a>
+                    </li>
+                    <li>
+                        <span class="icon-phone-call"></span>
+                        <a href="tel:+905342456030">0534 245 6030</a>
                     </li>
                 </ul>
                 <!-- /.sidebar-one__info__list -->
