--- a/dizel-forklift.html
+++ b/dizel-forklift.html
@@ -7,14 +7,14 @@
   <title>Dizel Forklift</title>
 
   <meta
-        content="SETA Lifting, sektörde kalite ve güvenilirliği temsil eden bir marka olarak, müşterilerine geniş bir yelpazede yük kaldırma ve taşıma çözümleri sunmaktadır."
-        name="description" />
-    <meta
-        content="SETA Lifting, forklift, elektrikli forklift, dizel forklift, manlift, makasli kaldirma platformu, akulu istifleme makinesi, palet istifleyici, Excavator"
-        name="keywords" />
+    content="SETA Lifting, sektörde kalite ve güvenilirliği temsil eden bir marka olarak, müşterilerine geniş bir yelpazede yük kaldırma ve taşıma çözümleri sunmaktadır."
+    name="description" />
+  <meta
+    content="SETA Lifting, forklift, elektrikli forklift, dizel forklift, manlift, makasli kaldirma platformu, akulu istifleme makinesi, palet istifleyici, Excavator"
+    name="keywords" />
 
-    <!-- Canonical -->
-    <link rel="canonical" href="https://setalifting.com/dizel-forklift" />
+  <!-- Canonical -->
+  <link rel="canonical" href="https://setalifting.com/dizel-forklift" />
 
   <!-- favicons Icons -->
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.webp">
@@ -164,13 +164,14 @@
               </div>
               <!-- /.main-header__top__icon-group -->
               <div class="main-header__call">
-                <a href="tel:+905335742631" class="main-header__call__numbers"><span
+                <a href="#" class="main-header__call__numbers"><span
                     class="main-header__call__icon icon-phone-call"></span></a>
                 <!-- /.main-header__call__icon -->
                 <div class="main-header__call__inner">
                   <span class="main-header__call__tagline">BİZİ ARAYIN</span>
                   <!-- /.main-header__call__tagline -->
-                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
+                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
+                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
                   <!-- /.main-header__call__number -->
                 </div>
                 <!-- /.main-header__call__inner -->
@@ -465,6 +466,10 @@
                     <span class="icon-phone-call"></span>
                     <a href="tel:+905335742631">0533 574 2631</a>
                   </li>
+                  <li>
+                    <span class="icon-phone-call"></span>
+                    <a href="tel:+905342456030">0534 245 6030</a>
+                  </li>
                 </ul>
                 <!-- /.list-unstyled footer-widget__info -->
                 <div class="footer-widget__social">
@@ -597,6 +602,10 @@
           <i class="fa fa-phone-alt"></i>
           <a href="tel:+905335742631">0533 574 2631</a>
         </li>
+        <li>
+          <i class="fa fa-phone-alt"></i>
+          <a href="tel:+905342456030">0534 245 6030</a>
+        </li>
       </ul>
       <!-- /.mobile-nav__contact -->
       <div class="mobile-nav__social">
@@ -609,7 +618,7 @@
           <span class="sr-only">Twitter</span>
         </a>
         <a href="" aria-hidden="true" target="_blank">
-          <i class="fab fa-pinterest-p" ></i>
+          <i class="fab fa-pinterest-p"></i>
           <span class="sr-only">Pinterest</span>
         </a>
         <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
@@ -674,6 +683,10 @@
           <li>
             <span class="icon-phone-call"></span>
             <a href="tel:+905335742631">0533 574 2631</a>
+          </li>
+          <li>
+            <span class="icon-phone-call"></span>
+            <a href="tel:+905342456030">0534 245 6030</a>
           </li>
         </ul>
         <!-- /.sidebar-one__info__list -->
