--- a/en-contact.html
+++ b/en-contact.html
@@ -164,13 +164,14 @@
               </div>
               <!-- /.main-header__top__icon-group -->
               <div class="main-header__call">
-                <a href="tel:+905335742631" class="main-header__call__numbers"><span
+                <a href="#" class="main-header__call__numbers"><span
                     class="main-header__call__icon icon-phone-call"></span></a>
                 <!-- /.main-header__call__icon -->
                 <div class="main-header__call__inner">
                   <span class="main-header__call__tagline">CALL US</span>
                   <!-- /.main-header__call__tagline -->
-                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
+                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
+                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
                   <!-- /.main-header__call__number -->
                 </div>
                 <!-- /.main-header__call__inner -->
@@ -324,7 +325,7 @@
             <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
             <script type="text/javascript">
               (function() {
-                emailjs.init("PISgcMnVhCNJaIT9Z");
+                emailjs.init("ypK9la5onEClZj9Ku");
               })();
 
               function sendMail() {
@@ -335,7 +336,7 @@
                 var subject = document.getElementById('subject').value;
                 var message = document.getElementById('message').value;
                 // EmailJS kullanarak e-posta gönder
-                emailjs.send("service_o2yg9yr", "template_pr501ck", {
+                emailjs.send("service_v35u2wm", "template_tdhusz7", {
                   name: name,
                   email: email,
                   phone: phone,
@@ -345,6 +346,12 @@
                   console.log('Email sent successfully!', response);
                   alert('Email sent successfully!!');
                   // E-posta başarıyla gönderildikten sonra yapılacak işlemleri buraya yazabilirsiniz
+                  // Formu temizle
+                  document.getElementById('name').value = '';
+                  document.getElementById('email').value = '';
+                  document.getElementById('phone').value = '';
+                  document.getElementById('subject').value = '';
+                  document.getElementById('message').value = '';
                 }, function(error) {
                   console.log('E-posta gönderilirken hata oluştu', error);
                   alert('There was an error sending the email. Please try again!!!');
@@ -383,7 +390,8 @@
                     <div class="contact-info__contact-list__content">
                       <span class="contact-info__contact-list__title">GSM</span>
                       <!-- /.contact-info__contact-list__title -->
-                      <a href="tel:+905342456030" class="contact-info__contact-list__link">+90 534 245 6030</a>
+                      <a href="tel:+905342456030" class="contact-info__contact-list__link">+90 534 245 6030</a><br>
+                      <a href="tel:+905335742631" class="contact-info__contact-list__link">+90 533 574 2631</a>
                       <!-- /.contact-info__contact-list__link -->
                     </div><!-- /.contact-info__contact-list__content -->
                   </div><!-- /.contact-info__contact-list__item -->
@@ -576,6 +584,10 @@
                       <span class="icon-phone-call"></span>
                       <a href="tel:+905335742631">0533 574 2631</a>
                     </li>
+                    <li>
+                      <span class="icon-phone-call"></span>
+                      <a href="tel:+905342456030">0534 245 6030</a>
+                    </li>
                   </ul>
                   <!-- /.list-unstyled footer-widget__info -->
                   <div class="footer-widget__social">
@@ -709,6 +721,10 @@
           <i class="fa fa-phone-alt"></i>
           <a href="tel:+905335742631">0533 574 2631</a>
         </li>
+        <li>
+          <i class="fa fa-phone-alt"></i>
+          <a href="tel:+905342456030">0534 245 6030</a>
+        </li>
       </ul>
       <!-- /.mobile-nav__contact -->
       <div class="mobile-nav__social">
@@ -786,6 +802,10 @@
           <li>
             <span class="icon-phone-call"></span>
             <a href="tel:+905335742631">0533 574 2631</a>
+          </li>
+          <li>
+            <span class="icon-phone-call"></span>
+            <a href="tel:+905342456030">0534 245 6030</a>
           </li>
         </ul>
         <!-- /.sidebar-one__info__list -->
