--- a/product.html
+++ b/product.html
@@ -164,13 +164,14 @@
               </div>
               <!-- /.main-header__top__icon-group -->
               <div class="main-header__call">
-                <a href="tel:+905335742631" class="main-header__call__numbers"><span
+                <a href="#" class="main-header__call__numbers"><span
                     class="main-header__call__icon icon-phone-call"></span></a>
                 <!-- /.main-header__call__icon -->
                 <div class="main-header__call__inner">
                   <span class="main-header__call__tagline">BİZİ ARAYIN</span>
                   <!-- /.main-header__call__tagline -->
-                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
+                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
+                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
                   <!-- /.main-header__call__number -->
                 </div>
                 <!-- /.main-header__call__inner -->
@@ -501,6 +502,10 @@
                       <span class="icon-phone-call"></span>
                       <a href="tel:+905335742631">0533 574 2631</a>
                     </li>
+                    <li>
+                      <span class="icon-phone-call"></span>
+                      <a href="tel:+905342456030">0534 245 6030</a>
+                    </li>
                   </ul>
                   <!-- /.list-unstyled footer-widget__info -->
                   <div class="footer-widget__social">
@@ -516,7 +521,8 @@
                       <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
                       <span class="sr-only">Instagram</span>
                     </a>
-                    <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
+                    <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true"
+                      target="_blank">
                       <i class="fab fa-youtube"></i>
                       <span class="sr-only">Youtube</span>
                     </a>
@@ -633,6 +639,10 @@
           <i class="fa fa-phone-alt"></i>
           <a href="tel:+905335742631">0533 574 2631</a>
         </li>
+        <li>
+          <i class="fa fa-phone-alt"></i>
+          <a href="tel:+905342456030">0534 245 6030</a>
+        </li>
       </ul>
       <!-- /.mobile-nav__contact -->
       <div class="mobile-nav__social">
@@ -710,6 +720,10 @@
           <li>
             <span class="icon-phone-call"></span>
             <a href="tel:+905335742631">0533 574 2631</a>
+          </li>
+          <li>
+            <span class="icon-phone-call"></span>
+            <a href="tel:+905342456030">0534 245 6030</a>
           </li>
         </ul>
         <!-- /.sidebar-one__info__list -->
