--- a/en-about.html
+++ b/en-about.html
@@ -53,46 +53,46 @@
     <link rel="stylesheet" href="assets/vendors/swiper/css/swiper-bundle.min.css" />
 
     <!-- template styles -->
-  <link rel="stylesheet" href="assets/css/boskery.css" />
+    <link rel="stylesheet" href="assets/css/boskery.css" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-13N7RSEHWD"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-13N7RSEHWD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'G-13N7RSEHWD');
-  </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-13N7RSEHWD');
+    </script>
 
-  <!-- Google Tag Manager -->
-  <script>
-    (function(w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-K92KW6JC');
-  </script>
-  <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-K92KW6JC');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body class="custom-cursor">
 
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K92KW6JC" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K92KW6JC" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- /.preloader -->
 
@@ -130,16 +130,12 @@
                 <div class="main-header__container container">
                     <div class="main-header__top">
                         <div class="main-header__social">
-                            <a href="../index-3.htm">
-                                <i class="fab fa-facebook-f" aria-hidden="true" target="_blank"></i>
+                            <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
+                                <i class="fab fa-facebook-f"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
-                            <a href="https://twitter.com">
-                                <i class="fab fa-twitter" aria-hidden="true" target="_blank"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                            <a href="../index-6.htm">
-                                <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
+                            <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+                                <i class="fab fa-instagram"></i>
                                 <span class="sr-only">Instagram</span>
                             </a>
                             <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true"
@@ -211,7 +207,8 @@
                                             <a href="en-makasli-kaldirma-platformu.html">SCISSOR LIFT PLATFORM</a>
                                         </li>
                                         <li>
-                                            <a href="en-akulu-istifleme-makinesi.html">BATTERY POWERED STACKING MACHINE</a>
+                                            <a href="en-akulu-istifleme-makinesi.html">BATTERY POWERED STACKING
+                                                MACHINE</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -290,9 +287,11 @@
                                 up to platforms
                                 has a wide range of products covering various industrial equipment. </p>
                             <p class="about-three__text">
-                                Our company, which closely follows the latest technological developments, offers the most reliable
+                                Our company, which closely follows the latest technological developments, offers the
+                                most reliable
                                 with factories
-                                is working. Our company, which prioritizes quality and trust, is committed to better service understanding.
+                                is working. Our company, which prioritizes quality and trust, is committed to better
+                                service understanding.
                                 by adopting, you
                                 will always continue to be the solution partner of our valued customers.
                             </p>
@@ -357,7 +356,7 @@
                                 <div class="about-three__experience__content">
                                     <div class="about-three__experience__text">
                                         <h4 class="about-three__experience__title">
-                                            Years of  <br />
+                                            Years of <br />
                                             experience
                                         </h4>
                                         <!-- /.about-three__experience__title -->
@@ -473,7 +472,8 @@
                                     <li><a href="en-dizel-forklift.html">Diesel Forklift</a></li>
                                     <li><a href="en-ekskavator.html">Excavator</a></li>
                                     <li><a href="en-makasli-kaldirma-platformu.html">Scissor Lift Platform</a></li>
-                                    <li><a href="en-akulu-istifleme-makinesi.html">Battery Powered Stacking Machine</a></li>
+                                    <li><a href="en-akulu-istifleme-makinesi.html">Battery Powered Stacking Machine</a>
+                                    </li>
                                 </ul>
                                 <!-- /.list-unstyled footer-widget__links -->
                             </div>
@@ -496,26 +496,24 @@
                                             <a href="mailto:info@setalifting.com">info@setalifting.com</a>
                                         </li>
                                         <li>
-                      <span class="icon-phone-call"></span>
-                      <a href="tel:+905335742631">0533 574 2631</a>
-                    </li>
-                    <li>
-                      <span class="icon-phone-call"></span>
-                      <a href="tel:+905342456030">0534 245 6030</a>
-                    </li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905335742631">0533 574 2631</a>
+                                        </li>
+                                        <li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
+                                        </li>
                                     </ul>
                                     <!-- /.list-unstyled footer-widget__info -->
                                     <div class="footer-widget__social">
-                                        <a href="">
-                                            <i class="fab fa-facebook-f" aria-hidden="true" target="_blank"></i>
+                                        <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true"
+                                            target="_blank">
+                                            <i class="fab fa-facebook-f"></i>
                                             <span class="sr-only">Facebook</span>
                                         </a>
-                                        <a href="https://twitter.com">
-                                            <i class="fab fa-twitter" aria-hidden="true" target="_blank"></i>
-                                            <span class="sr-only">Twitter</span>
-                                        </a>
-                                        <a href="">
-                                            <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
+                                        <a href="https://www.instagram.com/setalifting/" aria-hidden="true"
+                                            target="_blank">
+                                            <i class="fab fa-instagram"></i>
                                             <span class="sr-only">Instagram</span>
                                         </a>
                                         <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg"
@@ -648,17 +646,13 @@
             </ul>
             <!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
-                <a href="" aria-hidden="true" target="_blank">
+                <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                     <span class="sr-only">Facebook</span>
                 </a>
-                <a href="https://twitter.com" aria-hidden="true" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                    <span class="sr-only">Twitter</span>
-                </a>
-                <a href="">
-                    <i class="fab fa-pinterest-p" aria-hidden="true" target="_blank"></i>
-                    <span class="sr-only">Pinterest</span>
+                <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                    <span class="sr-only">Instagram</span>
                 </a>
                 <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
                     <i class="fab fa-youtube"></i>
@@ -732,17 +726,13 @@
             </div>
             <!-- /.sidebar-one__info -->
             <div class="sidebar-one__social sidebar-one__item">
-                <a href="" aria-hidden="true" target="_blank">
+                <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                     <span class="sr-only">Facebook</span>
                 </a>
-                <a href="https://twitter.com" aria-hidden="true" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                    <span class="sr-only">Twitter</span>
-                </a>
-                <a href="">
-                    <i class="fab fa-linkedin-in" aria-hidden="true" target="_blank"></i>
-                    <span class="sr-only">Linkedin</span>
+                <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                    <span class="sr-only">Instagram</span>
                 </a>
                 <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
                     <i class="fab fa-youtube"></i>
