--- a/en-ekskavator.html
+++ b/en-ekskavator.html
@@ -130,16 +130,12 @@
         <div class="main-header__container container">
           <div class="main-header__top">
             <div class="main-header__social">
-              <a href="../index-3.htm">
-                <i class="fab fa-facebook-f" aria-hidden="true" target="_blank"></i>
+              <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
+                <i class="fab fa-facebook-f"></i>
                 <span class="sr-only">Facebook</span>
               </a>
-              <a href="https://twitter.com">
-                <i class="fab fa-twitter" aria-hidden="true" target="_blank"></i>
-                <span class="sr-only">Twitter</span>
-              </a>
-              <a href="../index-6.htm">
-                <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
+              <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+                <i class="fab fa-instagram"></i>
                 <span class="sr-only">Instagram</span>
               </a>
               <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
@@ -625,16 +621,12 @@
                 </ul>
                 <!-- /.list-unstyled footer-widget__info -->
                 <div class="footer-widget__social">
-                  <a href="">
-                    <i class="fab fa-facebook-f" aria-hidden="true" target="_blank"></i>
+                  <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
                     <span class="sr-only">Facebook</span>
                   </a>
-                  <a href="https://twitter.com">
-                    <i class="fab fa-twitter" aria-hidden="true" target="_blank"></i>
-                    <span class="sr-only">Twitter</span>
-                  </a>
-                  <a href="">
-                    <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
+                  <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+                    <i class="fab fa-instagram"></i>
                     <span class="sr-only">Instagram</span>
                   </a>
                   <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
@@ -761,17 +753,13 @@
       </ul>
       <!-- /.mobile-nav__contact -->
       <div class="mobile-nav__social">
-        <a href="" aria-hidden="true" target="_blank">
+        <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
           <i class="fab fa-facebook-f"></i>
           <span class="sr-only">Facebook</span>
         </a>
-        <a href="https://twitter.com" aria-hidden="true" target="_blank">
-          <i class="fab fa-twitter"></i>
-          <span class="sr-only">Twitter</span>
-        </a>
-        <a href="">
-          <i class="fab fa-pinterest-p" aria-hidden="true" target="_blank"></i>
-          <span class="sr-only">Pinterest</span>
+        <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+          <i class="fab fa-instagram"></i>
+          <span class="sr-only">Instagram</span>
         </a>
         <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
           <i class="fab fa-youtube"></i>
@@ -845,17 +833,13 @@
       </div>
       <!-- /.sidebar-one__info -->
       <div class="sidebar-one__social sidebar-one__item">
-        <a href="" aria-hidden="true" target="_blank">
+        <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
           <i class="fab fa-facebook-f"></i>
           <span class="sr-only">Facebook</span>
         </a>
-        <a href="https://twitter.com" aria-hidden="true" target="_blank">
-          <i class="fab fa-twitter"></i>
-          <span class="sr-only">Twitter</span>
-        </a>
-        <a href="">
-          <i class="fab fa-linkedin-in" aria-hidden="true" target="_blank"></i>
-          <span class="sr-only">Linkedin</span>
+        <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+          <i class="fab fa-instagram"></i>
+          <span class="sr-only">Instagram</span>
         </a>
         <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
           <i class="fab fa-youtube"></i>
