--- a/en-akulu-istifleme-makinesi.html
+++ b/en-akulu-istifleme-makinesi.html
@@ -53,46 +53,46 @@
     <link rel="stylesheet" href="assets/vendors/swiper/css/swiper-bundle.min.css" />
 
     <!-- template styles -->
-  <link rel="stylesheet" href="assets/css/boskery.css" />
+    <link rel="stylesheet" href="assets/css/boskery.css" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-13N7RSEHWD"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-13N7RSEHWD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'G-13N7RSEHWD');
-  </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-13N7RSEHWD');
+    </script>
 
-  <!-- Google Tag Manager -->
-  <script>
-    (function(w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-K92KW6JC');
-  </script>
-  <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-K92KW6JC');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body class="custom-cursor">
 
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K92KW6JC" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K92KW6JC" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- /.preloader -->
 
@@ -130,16 +130,12 @@
                 <div class="main-header__container container">
                     <div class="main-header__top">
                         <div class="main-header__social">
-                            <a href="../index-3.htm">
-                                <i class="fab fa-facebook-f" aria-hidden="true" target="_blank"></i>
+                            <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
+                                <i class="fab fa-facebook-f"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
-                            <a href="https://twitter.com">
-                                <i class="fab fa-twitter" aria-hidden="true" target="_blank"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                            <a href="../index-6.htm">
-                                <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
+                            <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+                                <i class="fab fa-instagram"></i>
                                 <span class="sr-only">Instagram</span>
                             </a>
                             <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true"
@@ -211,7 +207,8 @@
                                             <a href="en-makasli-kaldirma-platformu.html">SCISSOR LIFT PLATFORM</a>
                                         </li>
                                         <li>
-                                            <a href="en-akulu-istifleme-makinesi.html">BATTERY POWERED STACKING MACHINE</a>
+                                            <a href="en-akulu-istifleme-makinesi.html">BATTERY POWERED STACKING
+                                                MACHINE</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -347,12 +344,14 @@
                                 <p class="product-details__excerpt__text">
                                     Double cylinder and electronic steering system available. <br>
                                     Equipped with electromagnetic / regenerative braking system.<br><br>
-                                    <strong>No AC Required: </strong> This allows the motor to be driven by direct current (DC)
+                                    <strong>No AC Required: </strong> This allows the motor to be driven by direct
+                                    current (DC)
                                     means that it can be operated
                                     income. Some motors require an alternating current (AC) source, but AC
                                     motors that do not require a DC source can operate directly from the DC source.
                                     <br>
-                                    <strong>Carbonless Brushless Motor: </strong>Requires less maintenance and is usually
+                                    <strong>Carbonless Brushless Motor: </strong>Requires less maintenance and is
+                                    usually
                                     lasts longer.<br>
                                     <strong>Stepless Speed Control: </strong>Ease of use for the driver.
 
@@ -672,7 +671,8 @@
                                     <li><a href="en-dizel-forklift.html">Diesel Forklift</a></li>
                                     <li><a href="en-ekskavator.html">Excavator</a></li>
                                     <li><a href="en-makasli-kaldirma-platformu.html">Scissor Lift Platform</a></li>
-                                    <li><a href="en-akulu-istifleme-makinesi.html">Battery Powered Stacking Machine</a></li>
+                                    <li><a href="en-akulu-istifleme-makinesi.html">Battery Powered Stacking Machine</a>
+                                    </li>
                                 </ul>
                                 <!-- /.list-unstyled footer-widget__links -->
                             </div>
@@ -695,26 +695,24 @@
                                             <a href="mailto:info@setalifting.com">info@setalifting.com</a>
                                         </li>
                                         <li>
-                      <span class="icon-phone-call"></span>
-                      <a href="tel:+905335742631">0533 574 2631</a>
-                    </li>
-                    <li>
-                      <span class="icon-phone-call"></span>
-                      <a href="tel:+905342456030">0534 245 6030</a>
-                    </li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905335742631">0533 574 2631</a>
+                                        </li>
+                                        <li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
+                                        </li>
                                     </ul>
                                     <!-- /.list-unstyled footer-widget__info -->
                                     <div class="footer-widget__social">
-                                        <a href="">
-                                            <i class="fab fa-facebook-f" aria-hidden="true" target="_blank"></i>
+                                        <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true"
+                                            target="_blank">
+                                            <i class="fab fa-facebook-f"></i>
                                             <span class="sr-only">Facebook</span>
                                         </a>
-                                        <a href="https://twitter.com">
-                                            <i class="fab fa-twitter" aria-hidden="true" target="_blank"></i>
-                                            <span class="sr-only">Twitter</span>
-                                        </a>
-                                        <a href="">
-                                            <i class="fab fa-instagram" aria-hidden="true" target="_blank"></i>
+                                        <a href="https://www.instagram.com/setalifting/" aria-hidden="true"
+                                            target="_blank">
+                                            <i class="fab fa-instagram"></i>
                                             <span class="sr-only">Instagram</span>
                                         </a>
                                         <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg"
@@ -847,17 +845,13 @@
             </ul>
             <!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
-                <a href="" aria-hidden="true" target="_blank">
+                <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                     <span class="sr-only">Facebook</span>
                 </a>
-                <a href="https://twitter.com" aria-hidden="true" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                    <span class="sr-only">Twitter</span>
-                </a>
-                <a href="">
-                    <i class="fab fa-pinterest-p" aria-hidden="true" target="_blank"></i>
-                    <span class="sr-only">Pinterest</span>
+                <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                    <span class="sr-only">Instagram</span>
                 </a>
                 <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
                     <i class="fab fa-youtube"></i>
@@ -931,17 +925,13 @@
             </div>
             <!-- /.sidebar-one__info -->
             <div class="sidebar-one__social sidebar-one__item">
-                <a href="" aria-hidden="true" target="_blank">
+                <a href="https://www.facebook.com/seta.motor.3" aria-hidden="true" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                     <span class="sr-only">Facebook</span>
                 </a>
-                <a href="https://twitter.com" aria-hidden="true" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                    <span class="sr-only">Twitter</span>
-                </a>
-                <a href="">
-                    <i class="fab fa-linkedin-in" aria-hidden="true" target="_blank"></i>
-                    <span class="sr-only">Linkedin</span>
+                <a href="https://www.instagram.com/setalifting/" aria-hidden="true" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                    <span class="sr-only">Instagram</span>
                 </a>
                 <a href="https://www.youtube.com/channel/UCcvLaIUhE7SizwZRmOy1mIg" aria-hidden="true" target="_blank">
                     <i class="fab fa-youtube"></i>
